# cubecl

./: .gitignore  Cargo.toml
.claude/: settings.local.json
crates/cubecl/: Cargo.toml
crates/cubecl-attention/src/: base.rs  lib.rs
crates/cubecl-core/src/frontend/element/: base.rs
crates/cubecl-core/src/frontend/element/int/: typemap.rs
crates/cubecl-cuda/: Cargo.toml
crates/cubecl-cuda/benches/: rms_norm.rs
crates/cubecl-ir/src/: processing.rs
crates/cubecl-linalg/: BENCHMARKS.md  Cargo.toml  LU_STATUS.md  OPTIMIZATION.md  TRUTHFUL_STATUS.md
crates/cubecl-linalg/benches/: README.md  cholesky.rs  lu.rs  norms.rs  norms_dumb.rs  norms_simple.rs  simple_norms.rs
crates/cubecl-linalg/examples/: lu_basic.rs
crates/cubecl-linalg/src/: error.rs  lib.rs  policy.rs  precision.rs
crates/cubecl-linalg/src/components/: cholesky.rs  conditioning.rs  iterative.rs  lu.rs  mod.rs  newton_schulz.rs  norm.rs  triangular.rs
crates/cubecl-linalg/src/kernels/: elementwise.rs  layout.rs  mod.rs  panel.rs  pivot.rs  reduce_ops.rs  syrk.rs  trailing_update.rs
crates/cubecl-linalg/src/solvers/: inverse.rs  mod.rs  solve.rs
crates/cubecl-linalg/src/tests/: cholesky_tests.rs  lu_tests.rs  mod.rs  norm_tests.rs  test_utils.rs
crates/cubecl-reduce/src/: test.rs
crates/cubecl-reduce/src/instructions/: argmax.rs  argmin.rs  max.rs  maxabs.rs  min.rs
crates/cubecl-sparse/: Cargo.toml  Implementation roadmap.md  README.md
crates/cubecl-sparse/src/: lib.rs
crates/cubecl-sparse/src/algorithm/: mod.rs
crates/cubecl-sparse/src/batch/: mod.rs
crates/cubecl-sparse/src/convert/: mod.rs
crates/cubecl-sparse/src/device/: mod.rs
crates/cubecl-sparse/src/dtype/: mod.rs
crates/cubecl-sparse/src/error/: mod.rs
crates/cubecl-sparse/src/format/: bcsc.rs  bsr.rs  coo.rs  csc.rs  csr.rs  mod.rs  nm.rs  traits.rs
crates/cubecl-sparse/src/fusion/: mod.rs
crates/cubecl-sparse/src/handle/: handle.rs  handle_ref.rs  mod.rs  tensor.rs
crates/cubecl-sparse/src/inspect/: mod.rs
crates/cubecl-sparse/src/interop/: mod.rs
crates/cubecl-sparse/src/io/: mod.rs
crates/cubecl-sparse/src/jit/: mod.rs
crates/cubecl-sparse/src/memory/: mod.rs  pool.rs
crates/cubecl-sparse/src/ops/: mod.rs  traits.rs
crates/cubecl-sparse/src/ops/spmm/: config.rs  execute.rs  mod.rs  plan.rs
crates/cubecl-sparse/src/ops/spmm/algorithm/: gather_gemm.rs  gather_tc.rs  merge_path.rs  mod.rs  row_split.rs  warp_row.rs
crates/cubecl-sparse/src/ops/spmm/analysis/: binning.rs  mod.rs  statistics.rs  tile.rs
crates/cubecl-sparse/src/pattern/: mod.rs
crates/cubecl-sparse/src/prune/: mod.rs  strategies.rs
crates/cubecl-sparse/src/view/: mod.rs
crates/cubecl-std/: Cargo.toml
crates/cubecl-std/benches/: rms_norm.rs
crates/cubecl-std/src/tensor/: mod.rs  permute.rs  rms_norm.rs
crates/cubecl-std/src/tests/tensor/: permute.rs
crates/cubecl-std/src/tests/tensor/test_macros/: permute.rs
crates/cubecl-wgpu/: Cargo.toml
crates/cubecl-wgpu/src/compiler/wgsl/: base.rs  compiler.rs
crates/cubecl/benches/: permute.rs  rms_norm.rs  rms_norm_impl.rs
crates/tracel-llvm-bundler/: Cargo.toml
crates/tracel-llvm-bundler/src/: lib.rs
examples/permute/src/: lib.rs
