[package]
authors = ["Tracel AI <info@tracel.ai>"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeCL Linear Algebra Operations"
edition.workspace = true
keywords = ["gpu", "linear-algebra", "cholesky", "lu", "solver"]
license.workspace = true
name = "cubecl-linalg"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-linalg"
version.workspace = true

[features]
default = ["std", "cubecl-runtime/default", "cubecl-core/default"]
export_tests = ["pretty_assertions", "dep:approx"]
std = ["cubecl-runtime/std", "cubecl-core/std"]

# Runtime features for benchmarks and tests
cpu = ["cubecl-cpu"]
cuda = ["cubecl-cuda"]
wgpu = ["cubecl-wgpu"]

# Test feature flags
linalg_tests_norms = []
linalg_tests_triangular = []
linalg_tests_cholesky = []
linalg_tests_lu = []
linalg_tests_newton_schulz = []
linalg_tests_solvers = []

linalg_tests_f16 = []
linalg_tests_f32 = []
linalg_tests_f64 = []

linalg_tests_batching = []
linalg_tests_conditioning = []
linalg_tests_mixed_precision = []

linalg_tests_base = [
    "linalg_tests_norms",
    "linalg_tests_triangular",
    "linalg_tests_cholesky",
    "linalg_tests_f32",
]

linalg_tests_all = [
    "linalg_tests_norms",
    "linalg_tests_triangular",
    "linalg_tests_cholesky",
    "linalg_tests_lu",
    "linalg_tests_newton_schulz",
    "linalg_tests_solvers",
    "linalg_tests_f16",
    "linalg_tests_f32",
    "linalg_tests_f64",
    "linalg_tests_batching",
    "linalg_tests_conditioning",
    "linalg_tests_mixed_precision",
]

[dependencies]
bytemuck = { workspace = true }
cubecl-common = { path = "../cubecl-common", version = "0.9.0-pre.1", default-features = false }
cubecl-core = { path = "../cubecl-core", version = "0.9.0-pre.1", default-features = false }
cubecl-runtime = { path = "../cubecl-runtime", version = "0.9.0-pre.1", default-features = false }
cubecl-std = { path = "../cubecl-std", version = "0.9.0-pre.1", default-features = false }
cubecl-reduce = { path = "../cubecl-reduce", version = "0.9.0-pre.1", default-features = false }
cubecl-matmul = { path = "../cubecl-matmul", version = "0.9.0-pre.1", default-features = false }
cubecl-random = { path = "../cubecl-random", version = "0.9.0-pre.1", default-features = false }
cubecl-cpu = { path = "../cubecl-cpu", version = "0.9.0-pre.1", default-features = false, optional = true }
cubecl-cuda = { path = "../cubecl-cuda", version = "0.9.0-pre.1", default-features = false, optional = true }
cubecl-wgpu = { path = "../cubecl-wgpu", version = "0.9.0-pre.1", default-features = false, optional = true }
half = { workspace = true, features = ["bytemuck"] }
thiserror = { workspace = true }
once_cell = "1.20"
spin = "0.9"
approx = { version = "0.5", optional = true }
pretty_assertions = { workspace = true, optional = true }

[dev-dependencies]
approx = "0.5"
cubecl-cpu = { path = "../cubecl-cpu", version = "0.9.0-pre.1", default-features = false }
rand = { workspace = true }

[[bench]]
name = "norms"
harness = false

[[bench]]
name = "cholesky"
harness = false
