[package]
name = "cubecl-sparse"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU-accelerated sparse tensor operations for CubeCL"

[dependencies]
cubecl-core = { path = "../cubecl-core", version = "0.2.0" }
cubecl-runtime = { path = "../cubecl-runtime", version = "0.2.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
dashmap = "6.1.0"

[dev-dependencies]
criterion = "0.7.0"

[features]
default = []
cuda = ["cubecl-core/cuda"]
wgpu = ["cubecl-core/wgpu"]

[[bench]]
name = "spmm"
harness = false
