[package]
name = "cubecl-sparse"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU-accelerated sparse tensor operations for CubeCL"

[dependencies]
cubecl-common = { path = "../cubecl-common", version = "=0.9.0-pre.3", default-features = false }
cubecl-core = { path = "../cubecl-core", version = "=0.9.0-pre.3", default-features = false }
cubecl-runtime = { path = "../cubecl-runtime", version = "=0.9.0-pre.3", default-features = false }
cubecl-std = { path = "../cubecl-std", version = "=0.9.0-pre.3", default-features = false }
cubecl-matmul = { path = "../cubecl-matmul", version = "=0.9.0-pre.3", default-features = false }
cubecl-random = { path = "../cubecl-random", version = "=0.9.0-pre.3", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
dashmap = "6.1.0"

[dev-dependencies]
criterion = "0.7.0"

[features]
default = []
cuda = ["cubecl-cuda"]
wgpu = ["cubecl-wgpu"]

[[bench]]
name = "spmm"
harness = false
